kubernetes/3_query_params_routing/myblog-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: myblog-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myblog
spec:
  hosts:
  - "*"
  gateways:
  - myblog-gateway
  http:
  - match:
    - uri:
        prefix: /myblog
      queryParams:
        user:
          exact: 'internal'
    rewrite: 
      uri: /    # rewrite the URI path to route to the root of the my-blog service
    route:
    - destination:
        port:
          number: 80
        host: myblog
        subset: v2
  - match:
    - uri:
        prefix: /myblog
    route:
    - destination:
        port:
          number: 80
        host: myblog
        subset: v1
    rewrite: 
      uri: /
